[package]
name = "deltav_calc_bin"
version = "0.1.0"
authors = ["Overloader<overloader@utanota.com>"]
edition = "2021"
description = "A simple ui to calculate the deltav requirements"
license = "BSD-3-Clause"
publish = false


[dependencies]
deltav_calc = { path = "../deltav_calc_lib" }
gtk = { version = "~0.5", package = "gtk4" }

