[package]
name = "deltav_calc"
version = "0.1.0"
authors = ["Overloader<overloader@utanota.com>"]
edition = "2021"
description = "Allows you to generate a graph representing a delta'v map used in the game Kerbal Space Program."
repository = "https://github.com/OverloaderV/deltav_calc/tree/master/deltav_calc_lib"
license = "BSD-3-Clause"
keywords = ["KerbalSpaceProgram", "KSP", "DeltaV"]
categories = ["mathematics"]

[dependencies]
petgraph = {version = "0.6.2", features = ["serde-1"] }
serde = { version = "~1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "~1.0"
